<resources>
    <string name="app_name">MoShow</string>
    <string name="title_activity_detail_movie">Detail Movie</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="release_date">Release Date</string>
    <string name="movie">Movies</string>
    <string name="tv_show">TV Shows</string>
    <string name="duration">Duration</string>
    <string name="genre">Genre</string>
    <string name="episode">Episode</string>
    <string name="cast">Cast</string>
    <string name="title_activity_detail_tv_show">Detail TV Show</string>
    <string name="duration_value">duration value</string>
    <string name="genre_value">genre value</string>
    <string name="episode_value">episode value</string>
    <string name="image_poster">Image Poster</string>
    <string name="error_msg">There is something wrong with the Apps</string>
    <string name="favorite">favorite</string>
    <string name="favorite_tv_show">Favorite Tv Show</string>
    <string name="favorite_movie">Favorite Movie</string>
</resources>