<?xml version="1.0" encoding="utf-8"?>
    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:descendantFocusability="blocksDescendants"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:ellipsize="end"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="@string/title" />

        <TableRow>
            <ImageView
                android:id="@+id/image_poster"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:src="@color/primaryLightColor"
                android:contentDescription="@string/image_poster"
                />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_gravity="center">

                <TableRow
                    android:layout_margin="5dp">
                    <TextView
                        android:id="@+id/text_releasedate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        tools:text="@string/release_date" />
                    <TextView
                        android:id="@+id/text_date"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:gravity="start"
                        android:textSize="12sp"
                        tools:text="@string/release_date" />
                </TableRow>

                <TableRow
                    android:layout_margin="5dp">
                    <TextView
                        android:id="@+id/text_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        tools:text="@string/duration" />

                    <TextView
                        android:id="@+id/duration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:layout_marginStart="5dp"
                        tools:text="@string/duration_value" />
                </TableRow>

                <TableRow
                    android:layout_margin="5dp">
                    <TextView
                        android:id="@+id/text_genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        tools:text="@string/genre" />

                    <TextView
                        android:id="@+id/genre"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:layout_marginStart="5dp"
                        tools:text="@string/genre_value" />
                </TableRow>
            </TableLayout>
        </TableRow>

        <Button
            android:id="@+id/button_cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cast" />

        <ImageButton
            android:id="@+id/img_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_share"
            tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/text_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/primaryTextColor"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                tools:text="@string/description"
                android:layout_marginTop="8dp"/>
    </TableLayout>